# TcpDemo

./: .gitignore  .~ReadMe.MD  CMakeLists.txt  ReadMe.MD  build_all.sh
CSharpClient/: Client.cs  Message.cs  PlayerInfo.cs  PlayerInfo.proto  client.cs  message.proto
Client/: Client.cpp  Client.h  main.cpp
Common/: CMakeLists.txt  Epoll.cpp  Epoll.h  Makefile  Message.h  MsgRecord.cpp  MsgRecord.h  MsgTransmission.cpp  MsgTransmission.h  MsgTransmission.hpp  Singleton.h  TcpSocket.cpp  TcpSocket.h  base.h  basetype.h  log.h
Config/: CMakeLists.txt  config.xml  loadconfig.cpp  loadconfig.h  loadconfig.hpp  test.cpp
Debug/: CMakeCache.txt  Makefile  PlayerInfo.pb.cc  PlayerInfo.pb.h  cmake_install.cmake
Handler/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  EventHandler.cpp  EventHandler.h  Handle.cpp  Handle.h  Handle.hpp  Handler.h  Message.h  handler.h
Net/: CMakeLists.txt  Epoll.cpp  Epoll.h  Net.cpp  Net.h  byte_swap.hpp  kbuffer.hpp  message.cpp  message.h  net.cpp  net.h  tcp_socket.cpp  tcp_socket.h
Performance/: fire.sh
Player/: Bag.cpp  Bag.h  CMakeLists.txt  Inventory.cpp  Inventory.h  Inventory.hpp  Item.cpp  Item.h  ItemConfig.h  Player.cpp  Player.h  PlayerStatus.h  PlayerStatus.hpp  command.cpp  playerstatus.cpp
Proto/: CMakeLists.txt  Makefile  Message.pb.cc  Message.pb.h  Message.proto  PlayerInfo.cs  PlayerInfo.pb.cc  PlayerInfo.pb.h  PlayerInfo.proto  build.sh  test  testprotobuf.cpp
Robot/: a.out  add_robots  add_to_slq.cpp  nohup.out  robot.cpp  robot.h  robot_run  robot_run.cpp  robot_run.gcda  robot_run.gcno  run_robots_500.sh  test_robot_run  test_robots_20
SQL/: CMakeLists.txt  demoDBType.h  readme.md  sql_pb_swap.hpp  test  testmysql.cpp  testredis  testreids.cpp  tomysql.cpp  tomysql.h  toredis.cpp  toredis.h
Server/: .Server.cpp.swp  Makefile  Server.cpp  Server.h  main.cpp
ServerDB/: db_main.cpp  db_server.cpp  db_server.h
ServerGame/: game_main.cpp  game_server.cpp  game_server.h
ServerGate/: broad.hpp  broadcast.hpp  gate_main.cpp  gate_queue.h  gate_server.cpp  gate_server.h
ServerLogin/: login_main.cpp  login_server.cpp  login_server.h
Status/: playerstatus.cpp
config/: config.xml  loadconfig.hpp  test
sql&redis/: testmysql  testmysql.cpp  testreids.cpp  tomysql.cpp  tomysql.h  toredis.cpp  toredis.h
testsocket/: build.sh  client  server  testclient.cpp  testserver.cpp
